--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --ssl 1 --open",
-    "build": "ng build --prod",
+    "build": "ng build --prod --base-href \"https://bl3rune.github.io/angular-app/\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
