rename and delimiter started

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.0.0",
+  "name": "js-text-tools",
+  "version": "0.5.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
