--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve --ssl 1 --open",
     "build": "ng build --prod --base-href \"https://bl3rune.github.io/\"",
+    "deploy": "ngh --branch=master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
