--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "short_name": "my-app",
+  "name": "js-text-tools",
+  "short_name": "jstt",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
