--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
     "protractor": "^5.4.0",
+    "replace-in-file": "^3.4.2",
     "rxjs-tslint": "^0.1.5",
     "ts-node": "~3.2.0",
     "tslint": "^5.11.0",
