splash screen and updated theme

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "js-text-tools",
   "short_name": "jstt",
-  "theme_color": "#1976d2",
-  "background_color": "#fafafa",
+  "theme_color": "#202020",
+  "background_color": "#202020",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
