--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --prod --ssl --open",
+    "start": "ng serve --open",
     "build": "ng build --prod --base-href \"https://bl3rune.github.io/\" && node build/fix-sw.js",
     "deploy": "npm run-script build && npx ngh --branch=master",
     "test": "ng test",
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^6.1.4",
     "@angular/platform-browser-dynamic": "^6.1.4",
     "@angular/platform-server": "^6.1.4",
-    "@angular/pwa": "^0.7.5",
+    "@angular/pwa": "^0.13.8",
     "@angular/router": "^6.1.4",
     "@angular/service-worker": "^6.1.4",
     "bootstrap": "^3.3.7",
@@ -33,7 +33,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^6.1.5",
     "@angular/compiler-cli": "^6.1.4",
     "@angular/language-service": "^5.2.11",
@@ -56,6 +56,6 @@
     "ts-node": "~3.2.0",
     "tslint": "^5.11.0",
     "typescript": "^2.7.2",
-    "webpack": "^4.17.1"
+    "webpack": "^4.30.0"
   }
 }
