--- a/package.json
+++ b/package.json
@@ -13,49 +13,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.4",
-    "@angular/common": "^6.1.4",
-    "@angular/compiler": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/forms": "^6.1.4",
-    "@angular/http": "^6.1.4",
-    "@angular/platform-browser": "^6.1.4",
-    "@angular/platform-browser-dynamic": "^6.1.4",
-    "@angular/platform-server": "^6.1.4",
-    "@angular/pwa": "^0.13.8",
-    "@angular/router": "^6.1.4",
-    "@angular/service-worker": "^6.1.4",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.5.7",
-    "ngx-bootstrap": "^2.0.0-rc.0",
-    "rxjs": "^6.2.2",
-    "rxjs-compat": "^6.2.2",
-    "zone.js": "^0.8.26"
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/platform-server": "^7.2.15",
+    "@angular/pwa": "^0.13.9",
+    "@angular/router": "^7.2.15",
+    "@angular/service-worker": "^7.2.15",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.6.8",
+    "jquery": "^3.4.1",
+    "ngx-bootstrap": "^4.2.0",
+    "popper.js": "^1.15.0",
+    "rxjs": "^6.5.2",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.1.4",
-    "@angular/language-service": "^5.2.11",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^10.9.3",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.14.7",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "^4.4.4",
-    "jasmine-core": "^3.2.1",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "protractor": "^5.4.0",
-    "replace-in-file": "^3.4.2",
-    "rxjs-tslint": "^0.1.5",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
+    "replace-in-file": "^3.4.4",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "~3.2.0",
-    "tslint": "^5.11.0",
-    "typescript": "^2.7.2",
-    "webpack": "^4.30.0"
+    "tslint": "^5.16.0",
+    "typescript": "~3.2.4",
+    "webpack": "^4.32.2"
   }
 }
