--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -2,7 +2,7 @@
   "index": "/index.html",
   "assetGroups": [
     {
-      "name": "app",
+      "name": "JSTextTools",
       "installMode": "prefetch",
       "updateMode": "prefetch",
       "resources": {
