--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
   "name": "js-text-tools",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
     "build": "ng build --prod --base-href \"https://bl3rune.github.io/\" && node build/fix-sw.js",
-    "deploy": "npm run-script build && npx ngh --branch=master",
+    "deploy": "npm run-script build && npm test && npx ngh --branch=master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
-    "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/platform-server": "^7.2.15",
-    "@angular/pwa": "^0.13.9",
-    "@angular/router": "^7.2.15",
-    "@angular/service-worker": "^7.2.15",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.8",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/pwa": "^0.803.25",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "^8.2.14",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
     "jquery": "^3.4.1",
-    "ngx-bootstrap": "^4.2.0",
-    "rxjs": "^6.5.2",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.8.29"
+    "ngx-bootstrap": "^4.3.0",
+    "npm": "^6.13.7",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.15",
-    "@fortawesome/fontawesome-free": "^5.8.2",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.3.25",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.14.7",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^10.17.14",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "^3.4.0",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^5.4.2",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "replace-in-file": "^3.4.4",
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~3.2.0",
-    "tslint": "^5.16.0",
-    "typescript": "~3.2.4",
-    "webpack": "^4.32.2"
+    "tslint": "^5.20.1",
+    "typescript": "~3.5.3",
+    "webpack": "^4.41.5"
   }
 }
